Added Headerbar *Added Headerbar *Added SearchButton

--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html lang="us">
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
 <body>
-<h1>HELLO WORLD</h1>
+
+	<div id="header">
+	
+		<div id="logo"></div>
+
+		<input id="search" type="button" href="logistics://search" value="Search"></input>
+
+	</div>
+
+
 </body>
 </html>
