--- a/index.html
+++ b/index.html
@@ -6,11 +6,22 @@
 </head>
 <body>
 
+<!-- Header -->
+
 	<div id="header">
 	
 		<div id="logo"></div>
 
 		<input id="search" type="button" href="logistics://search" value="Search"></input>
+
+	</div>
+
+
+<!-- Menu -->
+
+	<i class="material-icons" id="menu_button">menu</i>
+
+	<div id="menu">
 
 	</div>
 
