Butoon now clickable

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 	
 		<div id="logo"></div>
 
-		<input id="search" type="button" href="logistics://search" value="Search"></input>
-
+	<form action="logistics://search" method="link">
+		<input id="search" type="submit" value="Search"></input>
+	</form>
 	</div>
 
 
