Button set to div

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 	
 		<div id="logo"></div>
 
-	<form action="logistics://search" method="link">
-		<input id="search" type="submit" value="Search"></input>
-	</form>
+	<a href="logistics://search"><div>Search</div></a>
+
 	</div>
 
 
