--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 		<div id="logo"></div>
 
-	<a href="logistics://search"><div>Search</div></a>
+	<a href="logistics://search"><div id="search">Search</div></a>
 
 	</div>
 
