Link fills only the div now

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 		<div id="logo"></div>
 
-	<a href="logistics://search"><div id="search">Search</div></a>
+	<div id="search"><a class="search_link" href="logistics://search" title="Search"></a></div>
 
 	</div>
 
