--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <!-- Header -->
 
 	<div id="header">
+
+	<i class="material-icons" id="menu_button">menu</i>
 	
 		<div id="logo"></div>
 
-	<div id="search"><a class="search_link" href="logistics://search" title="Search"></a></div>
+	<div id="search">Search<a class="search_link" href="logistics://search"></a></div>
 
 	</div>
 
 
 <!-- Menu -->
 
-	<div id="menu">
-	<i class="material-icons" id="menu_button">menu</i>
-	</div>
-	
+
+	<div id="menu"></div>	
 
 
 </body>
