last search button fix

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 		<div id="logo"></div>
 
-	<div id="search">Search<a class="search_link" href="logistics://search"></a></div>
+	<div id="search"><a value="Search" class="search_link" href="logistics://search"></a></div>
 
 	</div>
 
