A try to make the search div clickable with javascript

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 		<div id="logo"></div>
 
-	<div id="search"><div id="search_text">Search</div><a class="search_link" href="logistics://search"></a></div>
+	<div id="search" onclick="location.href='logistics://search';">Search</div>
 
 	</div>
 
