App panel added

--- a/index.html
+++ b/index.html
@@ -22,8 +22,24 @@
 <!-- Menu -->
 
 
-	<div id="menu"></div>	
+	<div id="menu"></div>
 
+<!-- Apps -->
+
+	<ul id="apps">
+		<a href=""><li>SuperTuxKart</li></a>
+		<a href=""><li>SuperTux</li></a>
+		<a href=""><li>Libre Office</li></a>
+		<a href=""><li>Gimp</li></a>
+		<a href=""><li>VLC Media Player</li></a>
+		<a href=""><li>Blender</li></a>
+		<a href=""><li>0A.D.</li></a>
+		<a href=""><li>Geddit</li></a>
+		<a href=""><li>Chromium</li></a>
+		<a href=""><li>Audacity</li></a>
+		<a href=""><li>Bluefish</li></a>
+		<a href=""><li>BZflag</li></a>
+	</ul>
 
 </body>
 </html>
