[TOM2901]grammar mistake fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<a href=""><li>VLC Media Player</li></a>
 		<a href=""><li>Blender</li></a>
 		<a href=""><li>0A.D.</li></a>
-		<a href=""><li>Geddit</li></a>
+		<a href=""><li>gEdit</li></a>
 		<a href=""><li>Chromium</li></a>
 		<a href=""><li>Audacity</li></a>
 		<a href=""><li>Bluefish</li></a>
